import { describe, it, expect, vi, beforeEach, afterEach } from 'vitest';
import { generateAwsTfvars } from '../../../src/lib/generators/aws-generator';
import type { FormValues, DeploymentMode } from '../../../src/schemas/types';

// ─── Helpers ────────────────────────────────────────────────────────────────

const isolatedMode: DeploymentMode = {
  id: 'isolated',
  label: 'Isolated Network',
  description: 'Isolated mode',
  variables: [],
  fixedValues: { network_configuration: 'isolated' },
  requiredOverrides: {},
  defaultOverrides: {},
};

const customMode: DeploymentMode = {
  id: 'custom',
  label: 'Custom Network',
  description: 'Custom mode',
  variables: [],
  fixedValues: { network_configuration: 'custom' },
  requiredOverrides: {},
  defaultOverrides: {},
};

function minimalIsolatedValues(): FormValues {
  return {
    aws_account_id: '',
    region: 'us-east-1',
    admin_user: 'admin@example.com',
    databricks_account_id: '',
    resource_prefix: 'test-sra',
    vpc_cidr_range: '10.0.0.0/18',
    private_subnets_cidr: ['10.0.0.0/22', '10.0.4.0/22', '10.0.8.0/22'],
    privatelink_subnets_cidr: ['10.0.28.0/26', '10.0.28.64/26', '10.0.28.128/26'],
    sg_egress_ports: [443, 2443, 5432, 6666, 8443, 8444, 8445, 8446, 8447, 8448, 8449, 8450, 8451],
  };
}

function minimalCustomValues(): FormValues {
  return {
    aws_account_id: '',
    region: 'us-west-2',
    admin_user: 'admin@example.com',
    databricks_account_id: '',
    resource_prefix: 'custom-sra',
    custom_vpc_id: 'vpc-12345',
    custom_private_subnet_ids: ['subnet-aaa', 'subnet-bbb'],
    custom_sg_id: 'sg-12345',
    custom_relay_vpce_id: 'vpce-relay-123',
    custom_workspace_vpce_id: 'vpce-ws-456',
  };
}

// ─── Test suite ─────────────────────────────────────────────────────────────

describe('generateAwsTfvars', () => {
  let dateSpy: ReturnType<typeof vi.spyOn>;

  beforeEach(() => {
    // Pin the date to avoid snapshot flaking on timestamp
    dateSpy = vi.spyOn(Date.prototype, 'toISOString').mockReturnValue('2025-01-15T00:00:00.000Z');
  });

  afterEach(() => {
    dateSpy.mockRestore();
  });

  // ── Header ──────────────────────────────────────────────────────────────

  it('includes the header with generation timestamp', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).toContain('# Configuration Variables for AWS and Databricks');
    expect(output).toContain('# Generated by Databricks SRA WebUI on 2025-01-15T00:00:00.000Z');
  });

  // ── Sensitive fields ──────────────────────────────────────────────────────

  it('outputs required fields with reminder comment when empty', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).toContain('aws_account_id = ""  # Required');
    expect(output).toContain('databricks_account_id = ""  # Required');
  });

  it('outputs required fields with value when provided', () => {
    const values = minimalIsolatedValues();
    values.aws_account_id = '123456789012';
    values.databricks_account_id = 'aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee';
    const output = generateAwsTfvars(values, isolatedMode);
    expect(output).toContain('aws_account_id = "123456789012"');
    expect(output).toContain('databricks_account_id = "aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee"');
  });

  // ── AWS Variables section ─────────────────────────────────────────────────

  it('includes AWS Variables section', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).toContain('# AWS Variables');
    expect(output).toContain('# AWS account ID where resources will be deployed');
    expect(output).toContain('# AWS region for deployment');
  });

  it('includes region setting', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).toContain('region = "us-east-1"');
  });

  // ── Databricks Variables section ──────────────────────────────────────────

  it('includes Databricks Variables section', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).toContain('# Databricks Variables');
    expect(output).toContain('admin_user = "admin@example.com"');
  });

  // ── Resource Configuration section ────────────────────────────────────────

  it('includes resource prefix', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).toContain('resource_prefix = "test-sra"');
  });

  // ── Network Configuration (isolated mode) ─────────────────────────────────

  it('includes network_configuration = "isolated" in isolated mode', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).toContain('network_configuration = "isolated"');
  });

  it('includes VPC CIDR, private subnets, and privatelink subnets in isolated mode', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).toContain('vpc_cidr_range           = "10.0.0.0/18"');
    expect(output).toContain('private_subnets_cidr     = ["10.0.0.0/22", "10.0.4.0/22", "10.0.8.0/22"]');
    expect(output).toContain('privatelink_subnets_cidr = ["10.0.28.0/26", "10.0.28.64/26", "10.0.28.128/26"]');
  });

  it('includes egress ports in isolated mode', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    // sg_egress_ports has terraformType 'list(string)' in the schema,
    // so numeric values get serialized as quoted strings
    expect(output).toContain('sg_egress_ports          = [443, 2443, 5432, 6666, 8443, 8444, 8445, 8446, 8447, 8448, 8449, 8450, 8451]');
  });

  it('comments out custom network vars in isolated mode', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).toContain('# custom_vpc_id');
    expect(output).toContain('# custom_private_subnet_ids');
    expect(output).toContain('# custom_sg_id');
    expect(output).toContain('# custom_relay_vpce_id');
    expect(output).toContain('# custom_workspace_vpce_id');
  });

  // ── Network Configuration (custom mode) ───────────────────────────────────

  it('includes network_configuration = "custom" in custom mode', () => {
    const output = generateAwsTfvars(minimalCustomValues(), customMode);
    expect(output).toContain('network_configuration = "custom"');
  });

  it('includes custom VPC settings in custom mode', () => {
    const output = generateAwsTfvars(minimalCustomValues(), customMode);
    expect(output).toContain('custom_vpc_id = "vpc-12345"');
    expect(output).toContain('custom_private_subnet_ids = ["subnet-aaa", "subnet-bbb"]');
    expect(output).toContain('custom_sg_id = "sg-12345"');
    expect(output).toContain('custom_relay_vpce_id = "vpce-relay-123"');
    expect(output).toContain('custom_workspace_vpce_id = "vpce-ws-456"');
  });

  it('comments out isolated network vars in custom mode', () => {
    const output = generateAwsTfvars(minimalCustomValues(), customMode);
    expect(output).toContain('# vpc_cidr_range');
    expect(output).toContain('# private_subnets_cidr');
    expect(output).toContain('# privatelink_subnets_cidr');
    expect(output).toContain('# sg_egress_ports');
  });

  // ── Feature Flags ─────────────────────────────────────────────────────────

  it('omits feature flags at defaults, keeps required ones', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    // metastore_exists has no default — always output
    expect(output).toContain('metastore_exists = false');
    // These default to false in Terraform — omitted when at default
    expect(output).not.toContain('audit_log_delivery_exists');
    expect(output).not.toContain('enable_security_analysis_tool');
  });

  it('includes feature flags with custom values', () => {
    const values = minimalIsolatedValues();
    values.audit_log_delivery_exists = true;
    values.metastore_exists = true;
    values.enable_security_analysis_tool = true;
    const output = generateAwsTfvars(values, isolatedMode);
    expect(output).toContain('audit_log_delivery_exists = true');
    expect(output).toContain('metastore_exists = true');
    expect(output).toContain('enable_security_analysis_tool = true');
  });

  // ── Optional Configuration ────────────────────────────────────────────────

  it('omits cmk_admin_arn when not provided (uses Terraform default null)', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).not.toContain('cmk_admin_arn');
  });

  it('includes cmk_admin_arn when provided', () => {
    const values = minimalIsolatedValues();
    values.cmk_admin_arn = 'arn:aws:iam::123456789012:root';
    const output = generateAwsTfvars(values, isolatedMode);
    expect(output).toContain('cmk_admin_arn = "arn:aws:iam::123456789012:root"');
    expect(output).not.toContain('# cmk_admin_arn');
  });

  it('omits compliance security profile when at default (false)', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).not.toContain('enable_compliance_security_profile');
  });

  it('outputs compliance_standards as null when empty (required but nullable)', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).toContain('compliance_standards = null');
  });

  it('includes compliance_standards when provided', () => {
    const values = minimalIsolatedValues();
    values.compliance_standards = ['HIPAA', 'PCI_DSS'];
    const output = generateAwsTfvars(values, isolatedMode);
    expect(output).toContain('compliance_standards = ["HIPAA", "PCI_DSS"]');
  });

  it('omits deployment_name when not provided (uses Terraform default null)', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).not.toContain('deployment_name');
  });

  it('includes deployment_name when provided', () => {
    const values = minimalIsolatedValues();
    values.deployment_name = 'my-workspace';
    const output = generateAwsTfvars(values, isolatedMode);
    expect(output).toContain('deployment_name = "my-workspace"');
  });

  it('omits databricks_gov_shard when not provided (uses Terraform default null)', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).not.toContain('databricks_gov_shard');
  });

  it('includes databricks_gov_shard when provided', () => {
    const values = minimalIsolatedValues();
    values.databricks_gov_shard = 'civilian';
    const output = generateAwsTfvars(values, isolatedMode);
    expect(output).toContain('databricks_gov_shard = "civilian"');
  });

  // ── Structural checks ────────────────────────────────────────────────────

  it('output ends with a newline', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output.endsWith('\n')).toBe(true);
  });

  it('contains required section headers', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    const sections = [
      'AWS Variables',
      'Databricks Variables',
      'Resource Configuration',
      'Network Configuration',
      'Feature Flags',
    ];
    for (const section of sections) {
      expect(output).toContain(section);
    }
    // Optional Configuration only appears when non-default values exist
    expect(output).not.toContain('Optional Configuration');
  });

  // ── Snapshot test for isolated mode ───────────────────────────────────────

  it('matches snapshot for isolated mode with minimal values', () => {
    const output = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    expect(output).toMatchSnapshot();
  });

  // ── Snapshot test for custom mode ─────────────────────────────────────────

  it('matches snapshot for custom mode with minimal values', () => {
    const output = generateAwsTfvars(minimalCustomValues(), customMode);
    expect(output).toMatchSnapshot();
  });

  // ── Mode difference verification ──────────────────────────────────────────

  it('generates different network sections for isolated vs custom modes', () => {
    const isolatedOutput = generateAwsTfvars(minimalIsolatedValues(), isolatedMode);
    const customOutput = generateAwsTfvars(minimalCustomValues(), customMode);

    // Isolated mode has active vpc_cidr_range, custom has commented
    expect(isolatedOutput).toContain('vpc_cidr_range           = "10.0.0.0/18"');
    expect(customOutput).toContain('# vpc_cidr_range');

    // Custom mode has active custom_vpc_id, isolated has commented
    expect(customOutput).toContain('custom_vpc_id = "vpc-12345"');
    expect(isolatedOutput).toContain('# custom_vpc_id');
  });
});
