// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateAwsTfvars > matches snapshot for custom mode with minimal values 1`] = `
"# =============================================================================
# Configuration Variables for AWS and Databricks
# Generated by Databricks SRA WebUI on 2025-01-15T00:00:00.000Z
# =============================================================================

# -----------------------------------------------------------------------------
# AWS Variables
# -----------------------------------------------------------------------------

# AWS account ID where resources will be deployed
aws_account_id = ""  # Required — fill in before running terraform

# AWS region for deployment
region = "us-west-2"

# -----------------------------------------------------------------------------
# Databricks Variables
# -----------------------------------------------------------------------------

# Admin user email for workspace and catalog management
admin_user = "admin@example.com"

# Databricks account ID
databricks_account_id = ""  # Required — fill in before running terraform

# -----------------------------------------------------------------------------
# Resource Configuration
# -----------------------------------------------------------------------------

# Prefix used for naming and tagging resources (e.g., S3 buckets, IAM roles)
resource_prefix = "custom-sra"

# -----------------------------------------------------------------------------
# Network Configuration
# -----------------------------------------------------------------------------

# Network type: "custom" or "isolated" (see README.md for more information)
network_configuration = "custom"

# ISOLATED NETWORK CONFIGURATION
# Uncomment and configure the following variables for isolated networking:

# vpc_cidr_range           = "10.0.0.0/18"
# private_subnets_cidr     = ["10.0.0.0/22", "10.0.4.0/22", "10.0.8.0/22"]
# privatelink_subnets_cidr = ["10.0.28.0/26", "10.0.28.64/26", "10.0.28.128/26"]
# sg_egress_ports          = [443, 2443, 5432, 6666, 8443, 8444, 8445, 8446, 8447, 8448, 8449, 8450, 8451]

# CUSTOM NETWORK CONFIGURATION
# Required when using network_configuration = "custom"
# Ensure that an STS interface endpoint, a Kinesis endpoint, and an S3 gateway endpoint are available within the VPC and associated with private subnet route tables.
# Ensure that Private DNS names have been enabled for Databricks PrivateLink endpoints.

custom_vpc_id = "vpc-12345"
custom_private_subnet_ids = ["subnet-aaa", "subnet-bbb"]
custom_sg_id = "sg-12345"
custom_relay_vpce_id = "vpce-relay-123"
custom_workspace_vpce_id = "vpce-ws-456"

# -----------------------------------------------------------------------------
# Feature Flags
# -----------------------------------------------------------------------------

metastore_exists = false
compliance_standards = null

"
`;

exports[`generateAwsTfvars > matches snapshot for isolated mode with minimal values 1`] = `
"# =============================================================================
# Configuration Variables for AWS and Databricks
# Generated by Databricks SRA WebUI on 2025-01-15T00:00:00.000Z
# =============================================================================

# -----------------------------------------------------------------------------
# AWS Variables
# -----------------------------------------------------------------------------

# AWS account ID where resources will be deployed
aws_account_id = ""  # Required — fill in before running terraform

# AWS region for deployment
region = "us-east-1"

# -----------------------------------------------------------------------------
# Databricks Variables
# -----------------------------------------------------------------------------

# Admin user email for workspace and catalog management
admin_user = "admin@example.com"

# Databricks account ID
databricks_account_id = ""  # Required — fill in before running terraform

# -----------------------------------------------------------------------------
# Resource Configuration
# -----------------------------------------------------------------------------

# Prefix used for naming and tagging resources (e.g., S3 buckets, IAM roles)
resource_prefix = "test-sra"

# -----------------------------------------------------------------------------
# Network Configuration
# -----------------------------------------------------------------------------

# Network type: "custom" or "isolated" (see README.md for more information)
network_configuration = "isolated"

# ISOLATED NETWORK CONFIGURATION
# Required when using network_configuration = "isolated"
vpc_cidr_range           = "10.0.0.0/18"
private_subnets_cidr     = ["10.0.0.0/22", "10.0.4.0/22", "10.0.8.0/22"]
privatelink_subnets_cidr = ["10.0.28.0/26", "10.0.28.64/26", "10.0.28.128/26"]
sg_egress_ports          = [443, 2443, 5432, 6666, 8443, 8444, 8445, 8446, 8447, 8448, 8449, 8450, 8451]

# CUSTOM NETWORK CONFIGURATION
# Uncomment and configure the following variables for custom networking:
# Required when using network_configure = "custom"
# Ensure that an STS interface endpoint, a Kinesis endpoint, and an S3 gateway endpoint are available within the VPC and associated with private subnet route tables.
# Ensure that Private DNS names have been enabled for Databricks PrivateLink endpoints.

# custom_vpc_id             = ""
# custom_private_subnet_ids = ["", ""]
# custom_sg_id              = ""
# custom_relay_vpce_id      = ""
# custom_workspace_vpce_id  = ""

# -----------------------------------------------------------------------------
# Feature Flags
# -----------------------------------------------------------------------------

metastore_exists = false
compliance_standards = null

"
`;
